# template

./: .gitignore  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst
scripts/: create_environment.sh
