[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "Brief description of the package"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://example.com/"
repository = "https://github.com/example/"
include = [
    "LICENSE",
]
packages = [
    {include = "mypack", from = "src"}
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
pre-commit = "*"
flake8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
